--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -6,12 +6,14 @@ on:
 
 jobs:
   build:
-
+    name: Build and Upload Android APK
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: set up JDK 11
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
         java-version: '11'
@@ -19,13 +21,15 @@ jobs:
         cache: gradle
 
     - name: Grant execute permission for gradlew
+      working-directory: mobile/android
       run: chmod +x gradlew
+
     - name: Build with Gradle
       working-directory: mobile/android
-      run: ./gradlew build
+      run: ./gradlew assembleRelease
 
     - name: Upload APK
       uses: actions/upload-artifact@v3
       with:
-        name: app-release.apk
-        path: app/build/outputs/apk/release/app-release.apk
+        name: app-release
+        path: mobile/android/app/build/outputs/apk/release/app-release.apk
