--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,6 +20,25 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
+    - name: Set up Android SDK
+      uses: android-actions/setup-android@v2
+      with:
+        api-level: 30
+        build-tools: 30.0.3
+
+    - name: Install Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+
+    - name: Install Dependencies
+      run: npm install
+      working-directory: mobile
+
+    - name: Sync Capacitor with Android
+      run: npx cap sync android
+      working-directory: mobile
+
     - name: Grant execute permission for gradlew
       working-directory: mobile/android
       run: chmod +x gradlew
