Update android.yml -build
add build

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,6 +13,19 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+
+    - name: Install dependencies
+      run: npm install
+      working-directory: mobile
+
+    - name: Build Next.js assets
+      run: npm run build
+      working-directory: mobile
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
@@ -25,15 +38,6 @@ jobs:
       with:
         api-level: 30
         build-tools: 30.0.3
-
-    - name: Install Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-
-    - name: Install Dependencies
-      run: npm install
-      working-directory: mobile
 
     - name: Sync Capacitor with Android
       run: npx cap sync android
