--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -55,4 +55,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: app-release
-        path: mobile/android/app/build/outputs/apk/release/app-release.apk
+        path: mobile/android/app/build/outputs/apk/release/*.apk
